--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -22,7 +22,17 @@ spec:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
+              key: mysql-root-password
+              name: mysql-secrets
+        - name: MYSQL_PASSWORD
+          valueFrom:
+            secretKeyRef:
               key: mysql-password
+              name: mysql-secrets
+        - name: MYSQL_USER
+          valueFrom:
+            secretKeyRef:
+              key: mysql-user
               name: mysql-secrets
         image: mysql:5.6
         imagePullPolicy: Always
